# mirror-loop

./: .editorconfig  .gitignore  ARCHITECTURE.md  AUTHORS  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HACKING.md  MAINTAINERS.md  Makefile  NOTES.md  NOTICE  README.md  ROADMAP.md  SECURITY.md  STYLE.md  game_design.md  pyproject.toml
.github/: FUNDING.yml  dependabot.yml  pull_request_template.md
.github/workflows/: baseline-adaptive-parity.yml  byte-identity-replay.yml
acceptance/: __init__.py  experience_change.py  predictability.py
acceptance/fixtures/: failing_session.json  passing_session.json
acceptance/tests/: test_experience_change.py  test_predictability.py
ci/: __init__.py  __main__.py  _runner.py  baseline_adaptive_parity.py  byte_identity_replay.py  commit_guard.py  dry_run.py  gates.py
ci/tests/: test_commit_guard.py  test_gates.py
docs/: AB_PREREGISTRATION.md  ACCEPTANCE_OBSERVABLES.md  ADAPTATION.md  CI.md  CORE_LOOP.md  EVENT_LOG_JSONL.md  GUARDRAILS.md  INDEX.md  INTAKE.md  LLM_COST_LATENCY.md  MIRROR_SCHEMA.md  PERSISTENCE.md  PLAYTEST_METHOD.md  PLAYTEST_README.md  PLAYTEST_RESULTS.md  RECONCILIATION.md  SCENE_FORMAT.md  SCHEMAS.md  SESSION.md  THESIS.md  architecture.md  changelog_etiquette.md  communication.md  concepts.md  contracts.md  conventions.md  core_loop_feel.md  decisions.md  department.md  dependencies.md  design-adaptive-feedback-loop-implementation.md  design-first-beat-of-axis-recognition-in-mirror-loop.md  dev_log.md  founder_brief.md  game_design.md  glossary.md  glossary_terms.md  glossary_v2.md  glossary_v3.md  inspiration.md  (+36 more)
docs/adr/: 0001-m1-locks.md  0002-runtime-platform.md  README.md
fixtures/: m1_canonical.jsonl  seed42_answers.json  seed42_answers_aggression.json
game/: __init__.py  __main__.py  act1.py  adapt.py  adaptation.py  flavor.py  instrumentation.py  playsession.py  playtest.py  replay.py  session.py  templates.py  variants.py  world.py  worldstate.py
game/fixtures/: adaptive_kind_resumed.json  baseline_seed42.json
game/scenes/: __init__.py  loader.py
game/tests/: __init__.py  test_ab_preregistration_doc.py  test_act1.py  test_adapt.py  test_adaptation.py  test_adaptation_doc.py  test_cli.py  test_flavor.py  test_instrumentation.py  test_playsession.py  test_playtest.py  test_readme_try_it.py  test_replay.py  test_scenes.py  test_seam.py  test_session.py  test_session_objective_doc.py  test_strip_adaptation.py  (+4 more)
guardrails/: __init__.py  __main__.py  cli.py  invariants.py
latency/: __init__.py  __main__.py  harness.py
llmbench/: __init__.py  __main__.py  budget.py  client.py  harness.py  metrics.py  models.py  prompts.py  tokens.py
loop/: __init__.py  __main__.py  core.py  example.py  session.py
mirror/: __init__.py  __main__.py  canonical.py  intake.py  log.py  loop.py  play.py  reducer.py  reflection.py  schema.py  state.py  validate.py
runtime/: __init__.py  __main__.py  render.py  shell.py  view.py
telemetry/: __init__.py  __main__.py
tests/: test_harness_smoke.py  test_metrics.py  test_repo_docs.py  test_tokens.py
(+48 files in other folders)
