[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mirror-loop"
version = "0.0.1"
description = "Mirror Loop — local-first adaptive narrative game prototype (pre-build acceptance gate)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools]
packages = ["acceptance", "mirror"]

[tool.pytest.ini_options]
testpaths = ["acceptance/tests", "mirror/tests"]
